# StellarVault

./: README.md  Untitled0.ipynb  vercel.json
.github/workflows/: deploy.yml
Frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
Frontend/app/: globals.css  page.tsx
Frontend/app/admin/: page.tsx
Frontend/app/analytics/: page.tsx
Frontend/app/borrow/: page.tsx
Frontend/app/dashboard/: page.tsx
Frontend/app/kyc/: page.tsx
Frontend/app/lend/: page.tsx
Frontend/app/social/: page.tsx
Frontend/components/: EscrowActions.tsx
Frontend/components/charts/: LoanDistributionChart.tsx  PoolLiquidityChart.tsx  RiskHeatmap.tsx  TrustHistoryChart.tsx
Frontend/components/guarantor/: GuarantorAlert.tsx  GuarantorLockCard.tsx  (+1 more)
Frontend/context/: AuthContext.tsx  WalletContext.tsx
Frontend/e2e/: smoke.spec.ts
Frontend/hooks/: useApi.ts
Frontend/lib/: contract.ts  mock-data.ts  stellar.ts  usePoolStats.ts
Frontend/playwright-report/: index.html
Frontend/src/: App.tsx  main.tsx
contracts/: Cargo.toml
contracts/src/: lib.rs
server/: .gitignore  db.ts  package-lock.json  package.json  routes.ts  server.ts  stellar.ts  tsconfig.json
server/controllers/: adminController.ts  lendController.ts  loanController.ts  socialController.ts  transactionController.ts  userController.ts
server/models/: ActiveLoan.ts  Endorsement.ts  Guarantor.ts  LendPosition.ts  Loan.ts  Transaction.ts  User.ts
server/routes/: auth.ts  loans.ts
server/utils/: trustScore.ts
(+20 files in other folders)
